--- a/Hw4.Power.ipynb
+++ b/Hw4.Power.ipynb
@@ -16,14 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "n = 1000\n",
-    "p = 1/n\n",
+    "p = 2/n\n",
     "\n",
     "def matr(n):\n",
     "    A = np.zeros((n,n))\n",
@@ -61,17 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.1447360951694714\n",
-      "3.114607796165738\n",
-      "2.990972998822\n",
-      "2.2713704919732556\n"
+      "1.5723680475847357\n",
+      "1.5111844808563397\n",
+      "1.2356930595973163\n"
      ]
     }
    ],
@@ -89,15 +88,14 @@
     "\n",
     "print(1/np.sqrt(power(dobavka(L, 0),n)))\n",
     "print(1/np.sqrt(power(dobavka(L, 0.4),n)))\n",
-    "print(1/np.sqrt(power(dobavka(L, 2),n)))\n",
-    "print(1/np.sqrt(power(dobavka(L, 10),n)))"
+    "print(1/np.sqrt(power(dobavka(L, 2),n)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "При увеличении высоты горбика основное положение начинает отличаться от случая с просто ямой."
+    " При увеличении высоты горбика основное состояние начинает отличаться от случая с просто ямой $\\frac{\\pi}{2}$."
    ]
   }
  ],
